# tokenized-assets-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  companies.csv  docker-compose.batch.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  step_run.py
config/searxng/: settings.yml
database/: schema.sql
docs/: API.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BatchProcess.tsx  CompanyDetails.tsx  DuplicateDialog.tsx  Header.tsx  Landing.tsx  ResultsTable.tsx  SingleProcess.tsx
output/samples/: centrifuge_io.json  centrifuge_io.xlsx  comparison.xlsx  ondo_finance.json  ondo_finance.xlsx  securitize_io.json  securitize_io.xlsx
scripts/: batch_run.py  incremental_update.py  parallel_run.py  test_api_integration.py  validate_output.py
src/: cache.py  calibration.py  incremental.py  orchestrator.py  rate_limit.py  validation.py
src/api/: arq_worker.py  cli.py  database.py  server.py  worker.py
src/api/templates/: index.html
src/database/: saver.py
src/extractor/: llm.py
src/providers/: anthropic_provider.py  base.py  factory.py  openai_provider.py  openrouter_provider.py  structured_outputs.py  zai_provider.py
src/schema/: models.py
src/scrape/: scraper.py
src/search/: agentic.py  client.py
tests/: test_full_pipeline.py  test_pipeline.py
tests/api/: test_server.py
