[project]
name = "tokenized-assets-pipeline"
version = "1.0.0"
description = "Data Gathering System for Tokenized Assets Companies - 30-second pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "z-ai-web-dev-sdk>=0.1",
    "openpyxl>=3.1",
    "rich>=13.7",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
tap = "src.api.cli:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
